--- a/styles/SCSS/_mediaQueries.scss
+++ b/styles/SCSS/_mediaQueries.scss
@@ -3,28 +3,30 @@
 	.drinkGallery {
 		height: auto;
 		overflow-y: initial;
-    }
-    
-    .relatedDrinks {
-        margin: 0 auto;
-    }
+	}
 
-    .drinkFilters {
-        position: absolute;
-        top:0;
-        left: 100vw;
-        z-index: 100;
-        width: 100%;
-        height: 84vh;
-        
-        transition: left 0.5s;
+	.relatedDrinks {
+		margin: 0 auto;
+	}
 
-        &.showDrinksFilter {
-        left:0;
-        }
-    }
+	.drinkFilters {
+		position: absolute;
+		top: 0;
+		left: 100vw;
+		z-index: 100;
+		width: 100%;
+		height: 84vh;
 
-    
+		transition: left 0.5s;
 
+		&.showDrinksFilter {
+			left: 0;
+		}
+	}
 
 }
+        .hamburger {
+            position: absolute;
+            top: 0;
+            right: 0;
+        }
