--- a/styles/SCSS/_mediaQueries.scss
+++ b/styles/SCSS/_mediaQueries.scss
@@ -1,32 +1,87 @@
 @media (max-width: 750px) {
-	.drinkSpotlight,
-	.drinkGallery {
-		height: auto;
-		overflow-y: initial;
+	body.hamburgerOpen {
+		overflow-y: hidden;
+		height: 100vh;
 	}
 
 	.relatedDrinks {
-		margin: 0 auto;
+		margin: 0 auto 10px;
 	}
 
 	.drinkFilters {
-		position: absolute;
+		position: fixed;
 		top: 0;
 		left: 100vw;
-		z-index: 100;
 		width: 100%;
-		height: 84vh;
-
+		height: 100vh;
 		transition: left 0.5s;
+		border-radius: 0;
+		z-index: 5;
 
 		&.showDrinksFilter {
 			left: 0;
 		}
+		input {
+			padding: 1%;
+		}
+	}
+}
+.hamburger {
+	background: $accent;
+	padding: 4px;
+	border-radius: 5px;
+	position: fixed;
+	top: 10px;
+	right: 20px;
+	z-index: 10;
+}
+
+@media (max-width: 630px) {
+	h1 {
+		font-size: 4rem;
 	}
 
+	.drinkSpotlight {
+		h2 {
+			font-size: 2.5rem;
+		}
+		p {
+			font-size: 1.5rem;
+		}
+	}
 }
-        .hamburger {
-            position: absolute;
-            top: 0;
-            right: 0;
-        }
+
+@media (max-width: 500px) {
+	.drinkSpotlight {
+		h2 {
+			display: none;
+		}
+		.imgContainer {
+			position: relative;
+			float: none;
+			width: 100%;
+			height: 200px;
+			h2.mobile {
+				display: block;
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%, -50%);
+				z-index: 2;
+				font-size: 3rem;
+				text-shadow: 2px 2px 2px black;
+				color: $accent;
+				text-align: center;
+			}
+			img {
+				object-fit: cover;
+				height: 100%;
+				object-position: top;
+			}
+		}
+	}
+
+	h1 {
+		font-size: 3rem;
+	}
+}
