logic for empty response and button disabling

--- a/styles/SCSS/_header.scss
+++ b/styles/SCSS/_header.scss
@@ -42,7 +42,7 @@ h1 {
 	position: sticky;
 	display: block;
 	top: 300px;
-	width: 500px;
+	width: 100%;
 	font-size: 6rem;
 	line-height: 1;
 	margin: 0 0 10px;
