--- a/styles/SCSS/_mediaQueries.scss
+++ b/styles/SCSS/_mediaQueries.scss
@@ -11,7 +11,7 @@
 	.drinkFilters {
 		position: fixed;
 		top: 0;
-		left: 100vw;
+		left: 200vw;
 		width: 100%;
 		height: 100vh;
 		transition: left 0.5s;
@@ -28,12 +28,28 @@
 }
 .hamburger {
 	background: $accent;
-	padding: 4px;
 	border-radius: 5px;
 	position: fixed;
 	top: 10px;
 	right: 20px;
 	z-index: 10;
+	width: 40px;
+	height: 40px;
+	.bar {
+		display: inline-block;
+		position: absolute;
+		background: $white;
+		margin: 1px 0;
+		height: 2px;
+		width: 30px;
+		left: 5px;
+	}
+	.boar1 {
+		top: 5px;
+	}
+	.bar2 {
+		bottom: 5px;
+	}
 }
 
 @media (max-width: 630px) {
@@ -52,6 +68,9 @@
 }
 
 @media (max-width: 500px) {
+	h1 {
+		font-size: 3rem;
+	}
 	.drinkSpotlight {
 		h2 {
 			display: none;
@@ -79,9 +98,23 @@
 				object-position: top;
 			}
 		}
-	}
+		.ingredientParent {
+			float: none;
+			width: 100%;
+			margin: 0 auto;
+			li {
+				margin: 0;
+			}
 
-	h1 {
-		font-size: 3rem;
+			h3 {
+				float: none;
+				align-self: flex-start;
+				transform: translate(-50%, -50%);
+			}
+		}
+
+		.instructionParent {
+			margin-top: 20px;
+		}
 	}
 }
