--- a/styles/SCSS/_variables.scss
+++ b/styles/SCSS/_variables.scss
@@ -3,6 +3,7 @@ $primary: #3a405a;
 $secondary: #f9dec9;
 $tertiary: #f9f7f3;
 $accent: #8ce8fb;
+$accent2: #fcd29f;
 $black: #1f1f1f;
 $white: #f6f6f6;
 $backing: #313131;
