--- a/styles/SCSS/_landingPage.scss
+++ b/styles/SCSS/_landingPage.scss
@@ -1,7 +1,3 @@
-main {
-	height: auto;
-	position: relative;
-}
 .landingPage {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
@@ -15,11 +11,15 @@ main {
 		display: block;
 	}
 }
+// be seeing you later
+.hamburger {
+	display: none;
+}
 
 .drinkFilters {
 	grid-area: form;
 	position: relative;
-	background: linear-gradient(to bottom, #23232322, #23232322), url(../assets/filterImage2);
+	background: linear-gradient(to bottom, #23232322, #23232322), url(../assets/filterImage.jpg);
 	background-size: cover;
 	background-position: center;
 	height: 84vh;
@@ -27,6 +27,7 @@ main {
 	border-radius: 10px;
 	overflow-y: scroll;
 
+	// needed a subcontainer here because the element has scrolling but we're flexing elements within. flex and overflow don't play nicely on the same div.
 	.subContainerFilter {
 		@include flexCol(space-around);
 		width: 100%;
@@ -48,6 +49,7 @@ main {
 		margin: 2.5px 0;
 		border-radius: 5px;
 		z-index: 1;
+
 		&:focus {
 			outline: 4px dotted $secondary;
 		}
@@ -79,7 +81,7 @@ main {
 
 	.feelingLuckyButton,
 	.mocktailButton {
-		background: #fcd29f;
+		background: $accent2;
 	}
 
 	input {
@@ -99,6 +101,14 @@ main {
 	z-index: 1;
 	background: $backing;
 	border-radius: 10px;
+
+	h2.noResults {
+		margin: 5vh auto;
+		font-size: 2.4rem;
+		text-transform: uppercase;
+		text-align: center;
+		color: $accent;
+	}
 
 	ul {
 		overflow-y: scroll;
@@ -162,7 +172,7 @@ footer {
 	position: relative;
 	width: 100%;
 	bottom: 0;
-	background: $black;
+	background: black;
 	margin: 10px 0 0 0;
 	padding: 2px;
 	p {
