--- a/styles/SCSS/_landingPage.scss
+++ b/styles/SCSS/_landingPage.scss
@@ -99,7 +99,9 @@
 	opacity: 1;
 	transition: opacity 0.4s;
 	z-index: 1;
-	background: $backing;
+	background: linear-gradient(to bottom right, #222255cc, #332233cc), url(../assets/gallerySpotlight.jpg);
+	background-size: cover;
+	background-position: bottom;
 	border-radius: 10px;
 
 	h2.noResults {
